// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Prompt /> render default 1`] = `
<Collapsible
  defaultOpen={true}
  title={
    <h3
      className="py-3"
    >
      Prompt
    </h3>
  }
>
  <div
    className="prompt"
    dangerouslySetInnerHTML={
      {
        "__html": "prompt",
      }
    }
  />
</Collapsible>
`;

exports[`<Prompt /> render with open and onToggle 1`] = `
<Collapsible
  onToggle={[Function]}
  open={true}
  title={
    <h3
      className="py-3"
    >
      Prompt
    </h3>
  }
>
  <div
    className="prompt"
    dangerouslySetInnerHTML={
      {
        "__html": "prompt",
      }
    }
  />
</Collapsible>
`;

exports[`<Prompt /> render without title 1`] = `
<Collapsible
  defaultOpen={true}
  title={
    <h3
      className="py-3"
    >
      Prompt
    </h3>
  }
>
  <div
    className="prompt"
    dangerouslySetInnerHTML={
      {
        "__html": "prompt",
      }
    }
  />
</Collapsible>
`;
